<resources>
    <string name="app_name">EZ SERVICE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_slideshow">About</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_now">Login Now</string>
    <string name="already_sign_up">Already sign up?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createAds">POST ADS</string>
    <string name="fragment_favorite">LIKED SERVICE</string>
    <string name="fragment_edit_profile">EDIT PROFILE</string>

    <string-array name="category">
        <item>Category</item>
        <item>Hardware and Software</item>
        <item>Cleaning</item>
        <item>Home Maintenance</item>
        <item>Lesson</item>
        <item>Photographer and Videographer</item>
        <item>Electrical Wiring</item>
        <item>Aircond Service</item>
        <item>Plumbing</item>
    </string-array>
</resources>