<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bit.ezservice.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.bit.ezservice.ui.gallery.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_createAdsFragment"
            app:destination="@id/createAdsFragment" />
        <action
            android:id="@+id/action_nav_profile_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
        <action
            android:id="@+id/action_nav_profile_to_favoriteFragment"
            app:destination="@id/favoriteFragment" />
        <action
            android:id="@+id/action_nav_profile_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.bit.ezservice.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/createAdsFragment"
        android:name="com.bit.ezservice.CreateAdsFragment"
        android:label="@string/createAds"
        tools:layout="@layout/fragment_create_ads" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.bit.ezservice.EditProfileFragment"
        android:label="@string/fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.bit.ezservice.DetailFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="databaseId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.bit.ezservice.FavoriteFragment"
        android:label="@string/fragment_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
</navigation>