<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:theme="@style/Button_Black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/inputEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/inputPhoneNumber"
        app:layout_constraintEnd_toEndOf="@+id/inputUsername"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/inputUsername"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername" />

    <EditText
        android:id="@+id/inputPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="@+id/inputPhoneNumber"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/inputPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/inputPhoneNumber" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="32dp"
        android:text="@string/already_sign_up"
        android:textColor="#4A4A4A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textLoginNow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textLoginNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_now"
        android:textColor="#1C32ED"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>